--- a/laravel/package.json
+++ b/laravel/package.json
@@ -17,10 +17,16 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "cra-template-typescript": "1.1.3",
+        "create-react-app": "^5.0.0",
+        "npm": "^8.3.0",
+        "react-scripts": "5.0.0"
     }
 }
