--- a/laravel/package.json
+++ b/laravel/package.json
@@ -12,6 +12,10 @@
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "@types/react-router-dom": "^5.3.2",
+        "@webpack-cli/generators": "^2.4.1",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
@@ -19,9 +23,14 @@
         "postcss": "^8.1.14",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-router-dom": "^6.2.1",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1"
     },
     "dependencies": {
         "cra-template-typescript": "1.1.3",
