--- a/laravel/public/mix-manifest.json
+++ b/laravel/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/index.js": "/js/index.js",
-    "/css/index.css": "/css/index.css"
+    "/js/index.js": "/js/index.js?id=a99f82dd03f7d94cb7f0",
+    "/css/index.css": "/css/index.css?id=1ed994906d7616207415"
 }
