--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,18 +79,18 @@ services:
   #   ports:
   #     - ${MAILHOG_PORT}:8025
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: list_phpmyadmin
-    restart: always
-    depends_on:
-      - list_db
-    links:
-      - mysql:db
-    ports:
-      - 3000:80
-    volumes:
-      - "./docker/phpmyadmin:/phpmyadmin"
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   container_name: list_phpmyadmin
+  #   restart: always
+  #   depends_on:
+  #     - list_db
+  #   links:
+  #     - mysql:db
+  #   ports:
+  #     - 3000:80
+  #   volumes:
+  #     - "./docker/phpmyadmin:/phpmyadmin"
     # command: /usr/bin/pgweb --bind=0.0.0.0 --listen=8081 --prefix=pgweb/
 
 volumes:
